UI bug fix (#91)
* Popup layout correction if default box-sizing is not border-box

* added height to avoid overlapping scroll bar

* UI fix for twenty nineteen theme

* spacing provided

* Ui bug fix

--- a/public/css/gdpr-cookie-consent-public.css
+++ b/public/css/gdpr-cookie-consent-public.css
@@ -1334,6 +1334,9 @@ fieldset:disabled #gdpr-cookie-consent-bar a.btn {
 	.gdpr_messagebar_detail .gdprmodal-dialog {
 		max-width: 50% !important;
 	}
+	#gdpr-cookie-consent-bar.gdpr-widget {
+		min-width: 600px;
+	}
 }
 
 
